--- a/src/components/FiltersForm/FiltersForm.module.css
+++ b/src/components/FiltersForm/FiltersForm.module.css
@@ -40,19 +40,30 @@
 }
 
 .locationInput {
+  line-height: 1.25;
   border-radius: 12px;
   padding: 10px 10px 10px 40px;
   width: 100%;
   background: var(--inputs);
-  border: none;
+  border: 1px solid transparent;
   outline: none;
+  cursor: pointer;
   line-height: 1.5;
   color: var(--main);
+  transition: border-color var(--animation-cubicBezier),
+    color var(--animation-cubicBezier);
+  appearance: none;
+}
+
+.locationInput:hover,
+.locationInput:focus {
+  color: var(--main);
+  border-color: var(--text);
 }
 
 @media screen and (min-width: 768px) {
   .locationInput {
-    padding: 18px 18px 18px 48px;
+    padding: 10px 18px 10px 48px;
     height: 56px;
   }
 }
