--- a/src/components/CamperPageNavigation/CamperPageNavigation.module.css
+++ b/src/components/CamperPageNavigation/CamperPageNavigation.module.css
@@ -30,10 +30,10 @@
 
 .link:hover::after,
 .active::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -3px;
   width: 100%;
   height: 5px;
   background-color: var(--button);
