--- a/src/components/FiltersForm/FiltersForm.module.css
+++ b/src/components/FiltersForm/FiltersForm.module.css
@@ -39,6 +39,16 @@
   position: relative;
 }
 
+.inputWrapper:hover > svg,
+.inputWrapper:focus > svg,
+.active {
+  fill: var(--main);
+}
+
+.active {
+  fill: var(--main);
+}
+
 .locationInput {
   line-height: 1.25;
   border-radius: 12px;
@@ -49,7 +59,7 @@
   outline: none;
   cursor: pointer;
   line-height: 1.5;
-  color: var(--main);
+  color: var(--gray);
   transition: border-color var(--animation-cubicBezier),
     color var(--animation-cubicBezier);
   appearance: none;
